--- a/part/comment.part.html
+++ b/part/comment.part.html
@@ -18,18 +18,18 @@
     </div>
     <div class="panel-footer" style="padding: 0">
         <div class="btn-group btn-group-justified no-cor" role="group" aria-label="...">
-            <div class="btn-group" role="group">
+            <div class="btn-group btn-group-sm" role="group">
                 <button type="button" class="btn btn-default">
                     <span class="glyphicon glyphicon-thumbs-up"></span>&nbsp;&nbsp;888
                 </button>
             </div>
-            <div class="btn-group" role="group">
+            <div class="btn-group btn-group-sm" role="group">
                 <button type="button" class="btn btn-default">
                     <span class="glyphicon glyphicon-share"></span>&nbsp;&nbsp;分享
                 </button>
             </div>
-            <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default" onclick="toComment({{ id }});">
+            <div class="btn-group btn-group-sm" role="group">
+                <button type="button" class="btn btn-default" onclick="doComment({{ id }});">
                     <span class="glyphicon glyphicon-comment"></span>&nbsp;&nbsp;评论
                 </button>
             </div>
