添加了(1).留言发布回复功能(2).显示谁At谁(3).头像加载出错可以从缓存服务器加载
Signed-off-by: LiuYue <hangxingliu@gmail.com>

--- a/error.html
+++ b/error.html
@@ -14,8 +14,8 @@
         <div class="thumbnail">
             <img src="assets/error.jpg" alt="忍住眼泪.jpg" class="img-responsive">
             <div class="caption">
-                <h1 align="center">出错啦 Orz</h1>
-                <p align="center">这有可能是Sola的锅或者我的锅</p>
+                <h1 align="center">出错啦 Orz~<sub>∴</sub></h1>
+                <p align="center">这有可能是Sola的锅或者我的锅,反正不是刘越的锅</p>
                 <p align="center" id="errCode"></p>
             </div>
         </div>
@@ -24,7 +24,7 @@
 <p align="center" class="error"><span
         class="glyphicon glyphicon-info-sign"></span></p>
 <p align="center" class="error">电子科技大学中山学院网络维护科</p>
-<p align="center" class="error">@SumergiBi and Sola Background by Sola</p>
+<p align="center" class="error">@SumergiBi , LiuYue and Sola Background by Sola</p>
 </body>
 <script>
     var err = new RegExp('err=(\\d+)').exec(window.location.href);
