--- a/part/comment.part.html
+++ b/part/comment.part.html
@@ -1,10 +1,13 @@
 <!-- COMMENT START -->
-<div class="panel panel-info" id="gen" style="display: none">
+<div class="panel panel-info ly-panel-reply" id="gen" style="display: none">
     <div class="panel-heading">
         <div class="media">
             <div class="media-left">
                 <a href="#">
-                    <img class="img-circle" :src="user.avatar" width="64" height="64" alt="目瞪口呆.jpg">
+                    <img class="img-circle ly-user-ava"
+                    data-id="{{ id }}"
+                    data-cache="http://cache.sola.love/wximg/{{ user.id }}.jpg"
+                    data-src="{{ user.avatar }}" width="64" height="64" alt="目瞪口呆.jpg">
                 </a>
             </div>
             <div class="media-body">
@@ -29,7 +32,7 @@
                 </button>
             </div>
             <div class="btn-group btn-group-sm" role="group">
-                <button type="button" class="btn btn-default" onclick="doComment({{ id }});">
+                <button type="button" class="btn btn-default" onclick="App.doComment({{ id }});">
                     <span class="glyphicon glyphicon-comment"></span>&nbsp;&nbsp;评论
                 </button>
             </div>
