修复(1).At显示Bug.优化(1).头像显示,(2)显示At

--- a/part/reply.part.html
+++ b/part/reply.part.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="reply-body">
-        <div class="msg-text ly-son-reply">
+        <div class="msg-text ly-son-reply" data-mention="{{ mention }}">
             {{ text }}
         </div>
         <div class="reply-icon" onclick="App.selectReply({{ id }})">
